# quant-research-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
agents/: README.md
agents/backtesting_agent/: README.md
agents/data_engineer/: README.md
agents/infra_agent/: README.md
configs/: README.md
docker/: README.md
docs/: AI_ORCHESTRATION_ARCHITECTURE_AUDIT.md  AI_ORCHESTRATION_DEMO.md  AI_ORCHESTRATION_DEMO_DOCTRINE.md  AI_ORCHESTRATION_DEMO_SPECS.md  AI_ORCHESTRATION_GOVERNANCE_AND_RIGOR_AUDIT.md  AI_ORCHESTRATION_OPERATIONS_MANUAL.md  AI_ORCHESTRATION_PRESENTATION_EXTRACTION.md  AI_ORCHESTRATION_RESEARCH_CYCLE_AUDIT.md  AI_ORCHESTRATION_WEBSITE_DOCTRINE.md  AI_ORCHESTRATION_WEBSITE_SPECS.md  DESIGN_PRINCIPLES.md  LM_STUDIO_MCP_INTERFACE.md  LM_STUDIO_QWEN_OPERATOR_MANUAL.md  RESEARCH_INITIATION_AUDIT.md  VISUALIZATION_PHILOSOPHY.md  architecture.md  engineering_practices.md  experiment_framework.md  testing.md  workflow.md
results/: README.md
scripts/: allocation_study.py  compare_experiments.py  compare_strategies.py  demo_ai_orchestration.py  export_gallery.py  generate_report.py  list_datasets.py  portfolio_diagnostics.py  run_experiment.py  run_from_config.py  run_momentum_rotation.py  run_nl_data_request.py  run_walk_forward_validation.py  signal_geometry_study.py  update_dataset.py  validate_data.py
skills/: README.md
src/: __init__.py  cli.py  core.py
tests/: test_experiment_config.py  test_generate_report_script.py  test_skeleton.py
(+527 files in other folders)
